# sapling-crypto

./: Cargo.toml
benches/: baby_pedersen_hash.rs  pedersen_hash.rs  poseidon_hash.rs
examples/: bench.rs
src/: baby_group_hash.rs  baby_pedersen_hash.rs  baby_util.rs  eddsa.rs  group_hash.rs  lib.rs  pedersen_hash.rs  redbabyjubjub.rs  redjubjub.rs  util.rs
src/alt_babyjubjub/: mod.rs
src/babyjubjub/: mod.rs
src/circuit/: as_waksman.rs  baby_ecc.rs  baby_eddsa.rs  baby_pedersen_hash.rs  blake2s.rs  boolean.rs  ecc.rs  float_point.rs  lookup.rs  merkle.rs  mod.rs  multipack.rs  num.rs  pedersen_hash.rs  polynomial_lookup.rs  poseidon_hash.rs  sha256.rs  uint32.rs
src/circuit/sapling/: mod.rs
src/circuit/sprout/: commitment.rs  input.rs  mod.rs  output.rs  prfs.rs
src/circuit/test/: mod.rs
src/jubjub/: mod.rs
src/poseidon/: bn256.rs  mod.rs
src/primitives/: mod.rs
