[package]
authors = ["Sean Bowe <sean@z.cash>", "Alex Vlasov <alex.m.vlasov@gmail.com>"]
description = "Cryptographic library for Zcash Sapling with more content"
documentation = "https://github.com/matter-labs/sapling-crypto"
homepage = "https://github.com/matter-labs/sapling-crypto"
license = "MIT/Apache-2.0"
name = "sapling-crypto_ce"
repository = "https://github.com/matter-labs/sapling-crypto"
version = "0.1.2"
#edition = "2018"

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = ["multicore"]
multicore = ["bellman/multicore"]
nightly = ["bellman/nightly"]
wasm = ["bellman/wasm"]
 
[dependencies]
rand = "0.4"
digest = "0.8"
byteorder = "1"
tiny-keccak = {version = "2.0", features = ["keccak"] }
serde = "1.0"
serde_derive = "1.0"
sha2 = "0.8.0"

#bellman = {package = "bellman_ce", path = "../bellman"}
bellman = {package = "bellman_ce", version = "0.3", default-features = false}
blake2-rfc_bellman_edition = "0.0.1"

[dev-dependencies]
hex-literal = "0.2"

